# algorithms

./: CMakeLists.txt  README.md  algorithms.cmake
.devcontainer/: devcontainer.json
another/: main.cpp
insertion/: insertion.hpp  main.cpp
selection/: main.cpp  selection.hpp
template/: header.hpp  main.cpp
